--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,7 +3,7 @@
     <div class="mr-4">
       <a class="flex items-center h-18 px-4" href="{{ .Site.BaseURL }}">
         <div class="h-8">
-          {{ partial "logo-text" . }}
+          {{ partial "logo" . }}
         </div>
       </a>
     </div>
