add invisible placeholder to list

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -25,7 +25,8 @@
               </a>
             </div>
           {{ end }}
-          </div>
+        </div>
+        <div class="hidden md:block mr-0 sm:mr-8 mt-0 sm:mt-1 mb-1 sm:mb-0 font-bit text-white text-5xl leading-none select-none">{{ .Key }}</div>
       </div>
     {{ end }}
   </div>
