--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -5,14 +5,69 @@
 
   h1, h2, h3, h4, h5, h6 {
     @apply font-bold;
+
+    a:after {
+      background: none;
+    }
+
+    @screen lg {
+      a:before {
+        @apply absolute;
+        @apply opacity-60;
+        @apply text-blue-500;
+
+        content: "#";
+      }
+    }
   }
 
-  h1 { @apply text-4xl;  }
-  h2 { @apply text-3xl;  }
-  h3 { @apply text-2xl;  }
-  h4 { @apply text-xl;   }
-  h5 { @apply text-lg;   }
-  h6 { @apply text-base; }
+  h1 {
+    @apply text-4xl;
+
+    a:before {
+      left: -29px;
+    }
+  }
+
+  h2 {
+    @apply text-3xl;
+
+    a:before {
+      left: -27px;
+    }
+  }
+
+  h3 {
+    @apply text-2xl;
+
+    a:before {
+      left: -25px;
+    }
+  }
+
+  h4 {
+    @apply text-xl;
+
+    a:before {
+      left: -24px;
+    }
+  }
+
+  h5 {
+    @apply text-lg;
+
+    a:before {
+      left: -23px;
+    }
+  }
+
+  h6 {
+    @apply text-base;
+
+    a:before {
+      left: -22px;
+    }
+  }
 
   a {
     @apply relative;
@@ -40,8 +95,35 @@
     @apply text-sm;
   }
 
-  ul { @apply list-disc;    }
-  ol { @apply list-decimal; }
+  ul {
+    li {
+      @apply relative;
+      @apply block;
+      @apply mb-2;
+      @apply pl-6;
+
+      &:after {
+        @apply absolute;
+        @apply left-0;
+
+        content: "";
+        top: 0.45rem;
+        width: 10px;
+        height: 10px;
+        background: url("/icons/li-triangle-min.svg");
+        background-size: contain;
+      }
+    }
+  }
+
+  ol {
+    @apply list-decimal;
+
+    li {
+      @apply mb-2;
+      @apply pl-2;
+    }
+  }
 
   table {
     @apply w-full;
