add noscript tag, general improvements

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -10,7 +10,7 @@
       background: none;
     }
 
-    @screen lg {
+    @screen anchor {
       a:before {
         @apply absolute;
         @apply opacity-60;
