--- a/assets/scss/_styles.scss
+++ b/assets/scss/_styles.scss
@@ -58,3 +58,10 @@ body {
   transform-origin: bottom;
   animation: 300ms cubic-bezier(0.4, 0, 0.2, 1) 0s 1 animation;
 }
+
+:target::before {
+  content: "";
+  display: block;
+  height: 5.5rem;
+  margin: -5.5rem 0 0;
+}
