--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -9,8 +9,8 @@
   <div class="w-full max-w-screen-md mx-auto px-4 py-8 sm:py-16">
     {{ range .Data.Pages.GroupByDate "2006" }}
       <div class="block sm:flex mb-8 last:mb-0">
-        <div class="mr-0 sm:mr-8 mt-0 sm:mt-1 mb-1 sm:mb-0 font-bit text-5xl leading-none">{{ .Key }}</div>
-        <div class="w-full">
+        <div class="w-list-key mr-0 sm:mr-8 mt-0 sm:mt-1 mb-1 sm:mb-0 font-bit text-5xl leading-none">{{ .Key }}</div>
+        <div class="w-full sm:max-w-screen-list-body">
           {{ range .Pages }}
             <div class="border-b border-dashed border-gray-500">
               <a class="flex justify-between py-4" href="{{ .Permalink }}">
@@ -26,7 +26,6 @@
             </div>
           {{ end }}
         </div>
-        <div class="hidden md:block mr-0 sm:mr-8 mt-0 sm:mt-1 mb-1 sm:mb-0 font-bit text-white text-5xl leading-none select-none">{{ .Key }}</div>
       </div>
     {{ end }}
   </div>
