--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -37,3 +37,6 @@
     {{ end }}
   </div>
 </div>
+<noscript class="w-full px-4 py-3 bg-gray-900 text-gray-50 text-center">
+  This site works best with JavaScript enabled (it's just 10kb)
+</noscript>
