--- a/assets/scss/_prism.scss
+++ b/assets/scss/_prism.scss
@@ -86,3 +86,17 @@ pre[class*="language-"] {
 .token.important {
   @apply font-bold;
 }
+
+pre > code .token.deleted:not(.prefix) {
+  @apply block;
+
+  background-color: rgba(255, 0, 0, 0.1);
+	color: inherit;
+}
+
+pre > code .token.inserted:not(.prefix) {
+  @apply block;
+
+  background-color: rgba(0, 255, 128, 0.1);
+	color: inherit;
+}
