remove select from button

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -156,6 +156,7 @@
     @apply bg-white;
     @apply border;
     @apply border-gray-500;
+    @apply select-none;
 
     &:hover {
       @apply bg-gray-100;
