--- a/layouts/cycling/baseof.html
+++ b/layouts/cycling/baseof.html
@@ -2,15 +2,11 @@
 <html lang="{{ .Site.Language }}">
   <head>
     {{ partial "head" . }}
-    {{ $scripts := slice }}
-    {{ $scripts = $scripts | append "js/vendor/moment.min.js" }}
-    {{ $scripts = $scripts | append "js/vendor/chartjs.min.js" }}
-    {{ $scripts = $scripts | append "js/cycling.js" }}
-    {{ partial "javascript" (dict "context" . "paths" $scripts "name" "js/cycling.js") }}
   </head>
   <body x-data="{ menu: false }" :class="{ 'overflow-hidden': menu }" class="flex flex-col min-w-screen min-h-screen m-0 p-0 font-body bg-white text-gray-900">
     {{ partial "header" . }}
     {{ block "main" . }}
     {{ end }}
   </body>
+  {{ partial "esbuild" (dict "context" . "path" "js/cycling.js") }}
 </html>
