make images clickable, lazy loading

--- a/layouts/shortcodes/figure.html
+++ b/layouts/shortcodes/figure.html
@@ -1,8 +1,11 @@
 {{ if .Get "src" }}
+  {{ $src := (add "/img/" (.Get "src")) | safeURL }}
+  {{ $alt := default $src (.Get "caption") }}
+
   <figure class="ml-0 mt-6 sm:ml-6 sm:mt-0 first:ml-0 first:mt-0 {{ with .Get "class" }}{{ . }}{{ end }}">
-    <img class="w-full" src="/img/{{ .Get "src" | safeURL }}" {{ with .Get "caption" }} alt="{{ . }}" {{ end }}/>
+    {{ (printf "![%s](%s)" $alt $src) | $.Page.RenderString }}
     {{ if .Get "caption" }}
-      <figcaption>{{ .Get "caption" }}</figcaption>
+      <figcaption>{{ $alt }}</figcaption>
     {{ end }}
   </figure>
 {{ end }}
