--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -22,4 +22,5 @@
   {{ partial "javascript" (dict "context" . "paths" $scripts "name" "js/prism.js") }}
 {{ end }}
 
-{{ partial "esbuild" (dict "context" . "path" "js/main.js") }}
+{{ partial "esbuild-defer" (dict "context" . "path" "js/alpine.js") }}
+{{ partial "esbuild-async" (dict "context" . "path" "js/headroom.js") }}
