--- a/layouts/partials/esbuild-async.html
+++ b/layouts/partials/esbuild-async.html
@@ -1,7 +1,7 @@
 {{ if .Site.IsServer }}
   {{ $script := resources.Get .path | js.Build }}
-  <script type="text/javascript" src="{{ $script.Permalink }}"></script>
+  <script type="text/javascript" src="{{ $script.Permalink }}" async></script>
 {{ else }}
   {{ $script := resources.Get .path | js.Build (dict "minify" true) }}
-  <script type="text/javascript" src="{{ $script.Permalink }}"></script>
+  <script type="text/javascript" src="{{ $script.Permalink }}" async></script>
 {{ end }}
