--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -4,6 +4,11 @@
 <meta name="description" content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else }}{{ .Summary | plainify }}{{ end }}">
 <link rel="canonical" href="{{ .Permalink }}">
 
+<link rel="preload" href="/fonts/bit-outline/bit-outline.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="/fonts/roboto/roboto-400.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="/fonts/roboto/roboto-700.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="/fonts/roboto-mono/roboto-mono-400.woff2" as="font" type="font/woff2" crossorigin>
+
 {{ partial "style" . }}
 {{ partial "favicons" . }}
 
