add more report 6 content

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -179,4 +179,12 @@
       @apply outline-none;
     }
   }
+
+  audio {
+    @apply w-full;
+
+    &:focus {
+      @apply outline-none
+    }
+  }
 }
