hide image links in firefox

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -90,6 +90,13 @@
     }
   }
 
+  figure {
+    a:after {
+      @apply absolute;
+      @apply inset-0;
+    }
+  }
+
   figcaption {
     @apply mt-1;
     @apply text-sm;
