more consistent coloring

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -6,15 +6,15 @@
   h1, h2, h3, h4, h5, h6 {
     @apply font-bold;
 
-    a:after {
-      background: none;
+    a {
+      @apply relative;
+      @apply border-none;
     }
 
     @screen anchor {
       a:before {
         @apply absolute;
-        @apply opacity-60;
-        @apply text-blue-500;
+        @apply text-blue-200;
 
         content: "#";
       }
@@ -70,24 +70,8 @@
   }
 
   a {
-    @apply relative;
-
-    &:after {
-      @apply absolute;
-      @apply bottom-0;
-
-      content: "";
-      z-index: -1;
-      top: 75%;
-      left: -0.1em;
-      right: -0.1em;
-      transition: top 200ms cubic-bezier(0, 0.8, 0.13, 1);
-      background: rgba($blue-400, 0.4);
-    }
-
-    &:hover:after {
-      @apply top-0;
-    }
+    @apply border-b-4;
+    @apply border-blue-200;
   }
 
   figure {
@@ -154,17 +138,16 @@
     @apply py-4;
     @apply bg-gray-100;
     @apply border-l-6;
-    @apply border-blue-400;
-    @apply border-opacity-60;
+    @apply border-blue-200;
 
     &::before {
       @apply absolute;
       @apply text-6xl;
+      @apply text-blue-200;
 
       content: "\201C";
-      color: #82c5f4;
-      left: 12px;
       top: -8px;
+      left: 12px;
     }
   }
 
