--- a/layouts/_default/_markup/render-image.html
+++ b/layouts/_default/_markup/render-image.html
@@ -1,6 +1,6 @@
 {{ $img := imageConfig (add "/static" (.Destination | safeURL)) }}
 
-<a href="{{ .Destination | safeURL }}">
+<a href="{{ .Destination | safeURL }}" target="_blank">
   <img
     class="w-full"
     src="{{ .Destination | safeURL }}"
