move static data into own folder

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -105,7 +105,7 @@
         top: 0.45rem;
         width: 10px;
         height: 10px;
-        background: url("/icons/li-triangle-min.svg");
+        background: url("/static/icon/li-triangle-min.svg");
         background-size: contain;
       }
     }
