--- a/layouts/_default/_markup/render-image.html
+++ b/layouts/_default/_markup/render-image.html
@@ -1,4 +1,4 @@
-{{ $img := imageConfig (add "/static" (.Destination | safeURL)) }}
+{{ $img := imageConfig (.Destination | safeURL) }}
 
 <a href="{{ .Destination | safeURL }}" target="_blank">
   <img
