--- a/layouts/shortcodes/audio.html
+++ b/layouts/shortcodes/audio.html
@@ -1,5 +1,5 @@
 {{ if .Get "src" }}
-  {{ $src := (add "/audio/" (.Get "src")) | safeURL }}
+  {{ $src := (add "/static/audio/" (.Get "src")) | safeURL }}
   {{ $alt := default $src (.Get "caption") }}
   <figure class="ml-0 mt-6 sm:ml-6 sm:mt-0 first:ml-0 first:mt-0 {{ with .Get "class" }}{{ . }}{{ end }}">
     <audio controls preload="metadata">
