use different code to detect local server

--- a/layouts/partials/esbuild-async.html
+++ b/layouts/partials/esbuild-async.html
@@ -1,4 +1,4 @@
-{{ if .Site.IsServer }}
+{{ if in (.Site.BaseURL | string) "localhost" }}
   {{ $script := resources.Get .path | js.Build }}
   <script type="text/javascript" src="{{ $script.Permalink }}" async></script>
 {{ else }}
