--- a/assets/scss/_prism.scss
+++ b/assets/scss/_prism.scss
@@ -7,7 +7,7 @@ code[class*="language-"] {
   @apply text-gray-900;
   @apply whitespace-pre;
   @apply leading-relaxed;
-  @apply hypens-none;
+  @apply hyphens-none;
 
   .table {
     @apply inline
