remove justify, increase line height, specify locale

--- a/layouts/cycling/baseof.html
+++ b/layouts/cycling/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ .Site.Language }}">
+<html lang="{{ .Site.Params.Language }}">
   <head>
     {{ partial "head" . }}
     {{ partial "esbuild-async" (dict "context" . "path" "js/cycling.js") }}
