--- a/assets/scss/_single.scss
+++ b/assets/scss/_single.scss
@@ -3,8 +3,8 @@
 .single {
   @extend .content;
   @apply w-full;
-  @apply text-justify;
   @apply hyphens-auto;
+  @apply leading-relaxed;
 
   * {
     &:first-child {
