--- a/assets/scss/_utilities.scss
+++ b/assets/scss/_utilities.scss
@@ -4,6 +4,10 @@
 
 .hyphens-auto {
   hyphens: auto;
+  hyphenate-limit-chars: 6 3 3;
+  hyphenate-limit-lines: 2;
+  hyphenate-limit-last: always;
+  hyphenate-limit-zone: 8%;
 }
 
 .shadow-header {
